# AI-as-a-Backend-research

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: RESEARCH_FINDINGS_FINANCE_LFM.md  RESEARCH_FINDINGS_TODO_LFM.md  RESEARCH_FINDINGS_TODO_LIST.md  implementation_plan.md
docs/functiongemma/: fine-tune.md  formatting-and-practices.md  full-function-calling.md  function-calling-with-hf.md  model-card.md  overview.md
finance_app/: main.py  models.py  tools.py
finance_app/static/: index.html
finetuning/: README.md  finetune.py  finetune_lora.py  todo_training_data.json
shared/: __init__.py  gemma_router.py  liquid_router.py
todo_app/: __init__.py  main.py  models.py  tools.py
todo_app/static/: index.html
